2007-06-14  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EcmaUtils/Test/TestMonoDocument.cs, EcmaUtils/Test/TestEcmaReader.cs,
	  EcmaUtils/EcmaUtils.mdp, EcmaUtils/MonoDocument.cs,
	  EcmaUtils/EcmaReader.cs: Added MonoDocument class that represents a
	  monodoc ECMA-based documentation. Added a test unit for the class
	  too.

2007-06-14  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EcmaUtils/Test, EcmaUtils/Test/TestEcmaReader.cs,
	  EcmaUtils/Test/Examples, EcmaUtils/Test/Examples/Accel.xml,
	  EcmaUtils/Test.cs, EcmaUtils/EcmaUtils.mdp: Adding unit test
	  infrastructure.
	* EcmaUtils/EcmaReader.cs: Changed the form of getting the EcmaUtils
	  assembly to get the XSD stream.

2007-06-14  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp,
	  MonodocEditor/gtk-gui/Monodoc.Editor.OpenDocDialog.cs,
	  MonodocEditor/gtk-gui/gui.stetic, MonodocEditor/OpenDocDialog.cs:
	  Minor changes to the Open File Dialog.
	* EcmaUtils/EcmaReader.cs: Throw an exception if the path given is
	  empty.

2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  MonodocEditor/gtk-gui/gui.stetic: Added an ScrolledWindow.

2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs,
	  MonodocEditor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  MonodocEditor/gtk-gui/gui.stetic, EcmaUtils/EcmaReader.cs: Working
	  with the TextView widget.

2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp: Minor
	  changes using EcmaUtils.
	* EcmaUtils/MyClass.cs, EcmaUtils/EcmaUtils.mdp,
	  EcmaUtils/EcmaReader.cs: Initial implementation of EcmaReader class
	  that handles the reading of the XML documentation.
	* EcmaUtils/AssemblyInfo.cs: Assembly Info for the EcmaUtils library.

2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 
